Move appendices into separate files

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -159,22 +159,24 @@ Among them:
 1. **Data sparsity**
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
-2. **Response biases**
-Under-reporting.
-Non-response.
-Measurement error.
-3. **Hard to reach populations**
-Many of those at greatest risk, including KPs, are difficult to reach.
-May not appear on household survey sampling frames.
+2. **Survey biases**
+Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
+When available, biomarker data can be used to overcome under-reporting, it may still be subject to measurement errors.
+3. **Missing data**
+Many of the populations at greatest risk are difficult to reach, and not appear on household survey sampling frames.
+Individuals included on the sampling frame may choose not to respond.
 4. **Denominators and demography**
-Many indicators are rates or proportions, incorporating the population at risk in the denominator.
-However, accurately estimating these denominators is usually itself a challenging task, and taking a ratio of uncertain quantities only goes to amplify the uncertainty.
+Many indicators are rates or proportions, which incorporate the population at risk in the denominator.
+Accurately estimating these denominators is usually itself a challenging task.
+Taking a ratio of uncertain quantities only goes to amplify the uncertainty.
 For example, ART coverage has PLHIV as the denominator, which itself has the population size as its denominator.
 
-The above challenges make direct interpretation of data misleading, and foreground the importance of careful statistical modelling.
+The above challenges make direct interpretation of the data misleading.
+Careful statistical modelling is required to overcome these limitations.
 
 1. **Borrowing information**
-Although survey responses from women aged 20-24 are not directly informative about HIV prevalence in women 25-29, they are indirectly informative.
+Data not directly about the indicator of interest, but judged to be indirectly related, can be used to help improve estimates when little direct data is available.
+For example, if limited data is available for men aged 30-34, it may be reasonable to make use of the data for men aged 35-39.
 2. **Evidence synthesis**
 Multiple sources of evidence can be combined to overcome limitations of any one data source.
 3. **Expert guidance**
