--- a/docs/main.tex
+++ b/docs/main.tex
@@ -537,29 +537,31 @@ Among them:
   Collection of data is costly and time consuming.
   As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
 \item
-  \textbf{Response biases}
-  Under-reporting.
-  Non-response.
-  Measurement error.
+  \textbf{Survey biases}
+  Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
+  When available, biomarker data can be used to overcome under-reporting, it may still be subject to measurement errors.
 \item
-  \textbf{Hard to reach populations}
-  Many of those at greatest risk, including KPs, are difficult to reach.
-  May not appear on household survey sampling frames.
+  \textbf{Missing data}
+  Many of the populations at greatest risk are difficult to reach, and not appear on household survey sampling frames.
+  Individuals included on the sampling frame may choose not to respond.
 \item
   \textbf{Denominators and demography}
-  Many indicators are rates or proportions, incorporating the population at risk in the denominator.
-  However, accurately estimating these denominators is usually itself a challenging task, and taking a ratio of uncertain quantities only goes to amplify the uncertainty.
+  Many indicators are rates or proportions, which incorporate the population at risk in the denominator.
+  Accurately estimating these denominators is usually itself a challenging task.
+  Taking a ratio of uncertain quantities only goes to amplify the uncertainty.
   For example, ART coverage has PLHIV as the denominator, which itself has the population size as its denominator.
 \end{enumerate}
 
-The above challenges make direct interpretation of data misleading, and foreground the importance of careful statistical modelling.
+The above challenges make direct interpretation of the data misleading.
+Careful statistical modelling is required to overcome these limitations.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
   \textbf{Borrowing information}
-  Although survey responses from women aged 20-24 are not directly informative about HIV prevalence in women 25-29, they are indirectly informative.
+  Data not directly about the indicator of interest, but judged to be indirectly related, can be used to help improve estimates when little direct data is available.
+  For example, if limited data is available for men aged 30-34, it may be reasonable to make use of the data for men aged 35-39.
 \item
   \textbf{Evidence synthesis}
   Multiple sources of evidence can be combined to overcome limitations of any one data source.
@@ -1766,11 +1768,11 @@ Avenues for future work include:
 
 \startappendices
 
-\hypertarget{spatial-structure-supplement}{%
-\chapter{Spatial structure supplement}\label{spatial-structure-supplement}}
+\hypertarget{spatial-structure}{%
+\chapter{Spatial structure}\label{spatial-structure}}
 
-\hypertarget{a-model-for-risk-group-proportions-supplement}{%
-\chapter{A model for risk group proportions supplement}\label{a-model-for-risk-group-proportions-supplement}}
+\hypertarget{a-model-for-risk-group-proportions}{%
+\chapter{A model for risk group proportions}\label{a-model-for-risk-group-proportions}}
 
 \hypertarget{household-survey-data}{%
 \section{Household survey data}\label{household-survey-data}}
@@ -1932,8 +1934,35 @@ Zimbabwe & 63 & 2 \\
 \caption{The numer of areas and analysis levels for each country that were used in our analysis.}
 \end{table}
 
-\hypertarget{fast-approximate-bayesian-inference-supplement}{%
-\chapter{Fast approximate Bayesian inference supplement}\label{fast-approximate-bayesian-inference-supplement}}
+\hypertarget{fast-approximate-bayesian-inference}{%
+\chapter{Fast approximate Bayesian inference}\label{fast-approximate-bayesian-inference}}
+
+\hypertarget{simplified-naomi-model-description}{%
+\section{Simplified Naomi model description}\label{simplified-naomi-model-description}}
+
+\hypertarget{model-assessment-1}{%
+\section{Model assessment}\label{model-assessment-1}}
+
+\hypertarget{aghq-and-pca-aghq-details}{%
+\section{AGHQ and PCA-AGHQ details}\label{aghq-and-pca-aghq-details}}
+
+\hypertarget{normalising-constant-estimation}{%
+\section{Normalising constant estimation}\label{normalising-constant-estimation}}
+
+\hypertarget{inference-comparison-1}{%
+\section{Inference comparison}\label{inference-comparison-1}}
+
+\hypertarget{mcmc-convergence-and-suitability}{%
+\section{MCMC convergence and suitability}\label{mcmc-convergence-and-suitability}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{resources/naomi-aghq/20230811-095752-5b8181d8/depends/rhat} 
+
+}
+
+\caption{The potential scale reduction factor compares between- and within- estimates of univariate parameters. It is recommended only to use NUTS results if the value is less than 1.05, which it is for all parameters.}\label{fig:rhat}
+\end{figure}
 
 
 %%%%% REFERENCES
