Add AGHQ and PCA-AGHQ figures

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -147,6 +147,12 @@ The corresponding weighting function $\omega: \mathcal{Q}(d, k) \to \mathbb{R}$ 
 
 #### Adaptive quadrature
 
+(ref:aghq-demo) The Gauss-Hermite quadrature nodes $\z \in \mathcal{Q}(2, 3)$ for a two dimensional integral with three nodes per dimension (A). Adaption occurs based on the mode (B) and covariance of the integrand via either the Cholesky (C) or spectral (D) decomposition of the inverse curvature at the mode. The integrand is $f(\theta_1, \theta_2) = \text{sn}(0.5 \theta_1, \alpha = 2) \cdot \text{sn}(0.8 \theta_1 - 0.5 \theta_2, \alpha = -2)$, where $\text{sn}(\cdot)$ is the standard skewnormal probability density function with shape parameter $\alpha \in \mathbb{R}$.
+
+```{r aghq-demo, fig.cap="(ref:aghq-demo)"}
+knitr::include_graphics("figures/naomi-aghq/aghq-demo.png")
+```
+
 In adaptive quadrature, the quadrature nodes and weights depend on the specific integrand.
 Adaptive quadrature rules are particularly important for Bayesian inference problems because the posterior normalising function is a function of the data.
 No fixed quadrature rule can be expected to perform well in integrating any posterior distributions produced by observation of particular data.
@@ -262,6 +268,12 @@ The Naomi model has $m = 24$ hyperparameters.
 ### AGHQ with variable levels
 
 ### Principal components analysis
+
+(ref:pca-demo) See Figure \@ref(fig:aghq-demo).
+
+```{r pca-demo, fig.cap="(ref:pca-demo)"}
+knitr::include_graphics("figures/naomi-aghq/pca-demo.png")
+```
 
 ## Malawi case-study
 
