--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -41,7 +41,7 @@ Code for the analysis in this chapter is available from [`athowes/multi-agyw`](h
 
 ## Background
 
-Adolescent girls and young women (AGYW, defined here as females aged 15-29) are a demographic group at increased risk of HIV infection.
+Adolescent girls and young women (AGYW) aged 15-29 are a demographic group at increased risk of HIV infection.
 Though AGYW are only 28% of the population, they comprise 44% of new infections [@unaids2021update].
 HIV incidence for AGYW is 2.4 times higher than for similarly aged males.
 Table \@ref(tab:agyw-reasons) gives the social and biological reasons for this disparity.
