--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -23,7 +23,7 @@ resource_version <- "20230811-095752-5b8181d8"
 
 In this chapter I describe a novel Bayesian inference method I developed.
 The method is motivated the Naomi small-area estimation model.
-Over 35 countries have used the Naomi model software (\url{https://naomi.unaids.org}) to produce estimates of HIV indicators.
+Over 35 countries have used the Naomi model software (\url{https://naomi.unaids.org}) to produce subnational estimates of HIV indicators [@unaids2023global].
 Ensuring fast and accurate Bayesian inferences in this setting is challenging.
 
 I began working on this project at the start of my PhD.
