--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,9 +1,9 @@
-I would like to start by thanking my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship during the course of this research.
-I am grateful for the research environment offered by the HIV Inference Group, Modern Statistics and Statistical Machine Learning Centre for Doctoral Training, and Machine Learning and Global Health Network.
-The Effective Altruism community provided me a framework for deciding what to work on.
-Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab, and Alex Stringer for hosting my visit to the University of Waterloo.
-Thank you to my parents and grandparents.
-This research was possible due to funding by the Bill & Melinda Gates Foundation and EPSRC.
+I would like to start by thanking my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
+I am grateful for the research environment offered by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training, HIV Inference Group, and Machine Learning and Global Health Network.
+Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
+Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
+My sense for what is important to work on has been shaped by the Effective Altruism community.
+This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
 
 \begin{flushright}
 Adam Howes \\
