--- a/references.bib
+++ b/references.bib
@@ -573,20 +573,20 @@ URL= {https://www.r-inla.org/faq},
   publisher={John Wiley \& Sons}
 }
 
-@misc{unaids2021global,
-  title={Global AIDS Update 2021},
-  author={{UNAIDS}},
-  year={2021},
-  howpublished={\url{https://www.unaids.org/en/resources/documents/2021/global-aids-update}},
-  note={Accessed: June 2023}
-}
-
 @misc{unaids2022global,
   title={In Danger: UNAIDS Global AIDS Update 2022},
   author={{UNAIDS}},
   year={2022},
   howpublished={\url{https://www.unaids.org/en/resources/documents/2022/in-danger-global-aids-update}},
   note={Accessed: June 2023}
+}
+
+@misc{unaids2023global,
+  title={The path that ends AIDS: UNAIDS Global AIDS Update 2023},
+  author={{UNAIDS}},
+  year={2023},
+  howpublished={\url{https://www.unaids.org/en/resources/documents/2023/global-aids-update-2023}},
+  note={Accessed: August 2023}
 }
 
 @Manual{multiutils,
@@ -605,7 +605,6 @@ URL= {https://www.r-inla.org/faq},
   year={2014},
   publisher={Elsevier}
 }
-
 
 @article{freni2018note,
   title={A note on intrinsic conditional autoregressive models for disconnected graphs},
@@ -633,7 +632,16 @@ URL= {https://www.r-inla.org/faq},
   title={{2021 UNAIDS Global AIDS Update - Confronting Inequalities - Lessons for pandemic responses from 40 Years of AIDS}},
   author={{UNAIDS}},
   year={2021},
-  publisher={Geneva, Switzerland}
+  publisher={Geneva, Switzerland},
+  note={Accessed: June 2023}
+}
+
+@article{unaids2021global,
+  title={Global AIDS strategy 2021--2026. End inequalities. End AIDS},
+  author={UNAIDS},
+  publisher={Geneva, Switzerland},
+  year={2021},
+  note={Accessed: June 2023}
 }
 
 @article{saul2018dreams,
@@ -1029,7 +1037,7 @@ URL= {https://www.r-inla.org/faq},
   publisher={NIH Public Access}
 }
 
-@misc{ihme1,
+@misc{ihme2019,
  author = {{Global Burden of Disease Collaborative Network}},
  city = {Seattle},
  country = {USA},
@@ -1145,5 +1153,32 @@ URL= {https://www.r-inla.org/faq},
   number={7},
   year={2011},
   publisher={John Wiley \& Sons, Ltd}
+}
+
+@misc{robert2005monte,
+  title={Monte Carlo Statistical Methods (Springer Texts in Statistics)},
+  author={Robert, Christian P and Casella, George},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{openshow1979million,
+  title={A million or so correlation coefficients, three experiments on the modifiable areal unit problem},
+  author={Openshaw, S and Taylor, P.J. },
+  journal={Statistical Applications in the Spatial Science},
+  pages={127--144},
+  year={1979},
+  publisher={Pion}
+}
+
+@inbook{wakefield2010aggregation,
+author = {Wakefield, Jonathan and Lyons, Hilary},
+year = {2010},
+month = {03},
+pages = {541-558},
+title = {Spatial Aggregation and the Ecological Fallacy},
+volume = {2010},
+journal = {Chapman & Hall/CRC Handbooks of Modern Statistical Methods},
+doi = {10.1201/9781420072884-c30}
 }
 
