--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -31,7 +31,9 @@ knitr::opts_chunk$set(
 \markboth{Introduction}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-```{r gbd, fig.cap="HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used in the 2019 Global Burden of Disease study vary depending on severity of the condition. "}
+(ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used by the @ihme2019 vary depending on severity of the condition.
+
+```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
@@ -71,7 +73,7 @@ It is applied and methodological in that I am concerned first with real world qu
 It is Bayesian in that I arrive at conclusions based on data using probability models.
 
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-The @ihme1 found HIV to be the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older (Figure \@ref(fig:gbd)).
+The @ihme2019 found HIV to be the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older (Figure \@ref(fig:gbd)).
 Using statistics to quantify the epidemic is an important part of the public health response, and the path towards disease control and elimination.
 However, there are numerous challenges involved in obtaining suitable estimates of relevant indicators.
 
@@ -101,6 +103,8 @@ I apply the method to data from Malawi, and analyse the consequences of inferenc
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-```{r chapter-flowchart, fig.cap="The chapters in this thesis are structured to depend on each other. The dashed line represents a recommended, but not required dependency. Though chronological order is recommended, Chapter 4, Chapter 5 and Chapter 6 may be read in any order as, for the most part, they correspond to separable research projects."}
+(ref:chapter-flowchart) The chapters in this thesis are structured to depend on each other. Dashed lines represents a recommended, but not required dependency. Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as they correspond to separable research projects.
+
+```{r chapter-flowchart, fig.cap="(ref:chapter-flowchart)"}
 knitr::include_graphics("figures/introduction/chapter-flowchart.pdf")
 ```
